# learning-haskell

./: .gitignore  README.md  learning-haskell.cabal  stack.yaml  temp.htm
src/haskell/: accumulators.hs  add.hs  bottoms.hs  cards.hs  conditionals.hs  data.hs  exercises1.hs  exhaustiveness.hs  f-comp.hs  fold.hs  functions.hs  guards.hs  lib.hs  list-compr.hs  lists.hs  map.hs  maybe-monad.hs  maybeadd.hs  mon-add.hs  monad-io.hs  monad-methods.hs  pattern-matching.hs  printf-trace.hs  quickcheck.hs  records.hs  recursion.hs  scrape.hs  scrape2.hs  side-effects.hs  tuples.hs  type-holes.hs  type-infer.hs  typeclasses-p2.hs  typeclasses.hs  types.hs  where-let.hs
