cabal-version:      2.4
name:               learning-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vsevolod Mineev
maintainer:         vsevolod.mineev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable learning-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.14.3.0,
        vector ^>= 0.12.3.1,
        QuickCheck ^>= 2.14.2,
        scalpel ^>= 0.6.2,
        http-conduit ^>= 2.3.8,
        bytestring ^>= 0.10.12.0,
        tagsoup ^>= 0.14.8,
        HTTP ^>= 4000.3.16,


    hs-source-dirs:   app
    default-language: Haskell2010
